--- a/.computenest/ros_templates/template-enterprise.yaml
+++ b/.computenest/ros_templates/template-enterprise.yaml
@@ -303,7 +303,7 @@ Resources:
             Type=oneshot
             RemainAfterExit=yes
             WorkingDirectory=/root/application/mcp
-            ExecStart=/usr/bin/docker compose -f docker-compose.yaml up -d
+            ExecStart=/usr/bin/docker compose -f docker-compose-enterprise.yaml up -d
             ExecStop=/usr/bin/docker compose down
             TimeoutStartSec=0
 
